@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net35;net40;netcoreapp3.0</TargetFrameworks>
-    <!--<TargetFrameworks>net6.0-windows</TargetFrameworks>-->
+    <!--<TargetFrameworks>net35;net40;netcoreapp3.0</TargetFrameworks>-->
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
 
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
