@@ -11,5 +11,8 @@
 
 + KGySoft.Drawing.Wpf namespace
 ===============================
++ New BitmapSourceExtensions class:
+  + New GetReadableBitmapData method: to get an IReadableBitmapData data for all pixel formats.
 + New WriteableBitmapExtensions class:
-  + New GetReadWriteBitmapData method: to get an IReadWriteBitmap data for all pixel formats.
+  + New GetWritableBitmapData method: to get an IWritableBitmapData data for all pixel formats.
+  + New GetReadWriteBitmapData method: to get an IReadWriteBitmapData data for all pixel formats.
